--- a/work.html
+++ b/work.html
@@ -3,29 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">    
     <title>Work | Devanshi Jain</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
+    <header class = "header">
+        <a href="#" class="logo">Devanshi Jain</a>
+        
+        <input type="checkbox" id="toggle-menu" class="side-menu">
+        <label for="toggle-menu" class="hamb">
+            <i class="bx bx-menu"></i>
+        </label>
+        <nav class="navbar">
+            <a href="index.html">Home</a>
+            <a href="work.html" class="active">Work</a>
+            <a href="organizations.html">Organizations</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="organizations.html">Organizations</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="labexperiments.html">Lab-Experiments</a></li>
-        </ul>
-    </nav>
     <main>
         <section>
-            <h2>Work Experience</h2>
-            <h3>UC San Diego Jacobs School of Engineering</h3>
+            <h1 class="sub-title">Work Experience</h1>
+            <!-- <h3>UC San Diego Jacobs School of Engineering</h3> -->
             <div class="job">
-                <h4>Center for Energy Research</h4>
+                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">Center for Energy Research</h2>
                 <p><em>Software Engineering Intern</em></p>
                 <div class="skills">
                     <a href="https://www.python.org/" target="_blank">
@@ -37,8 +41,8 @@
                     <a href="https://pandas.pydata.org" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Pandas_logo.svg" alt="pandas" width="170" height="100">
                     </a>
-                    <a href="logo_light.svg" target="_blank">
-                        <img src="logo_light.svg" alt="Matplotlib" width="170" height="100"/>
+                    <a href="icons/logo_light.svg" target="_blank">
+                        <img src="icons/logo_light.svg" alt="Matplotlib" width="170" height="100">
                     </a>
                     <a href="https://seaborn.pydata.org" target="_blank">
                         <img src="https://seaborn.pydata.org/_static/logo-wide-lightbg.svg" alt="seaborn" width="170" height="100">
@@ -50,29 +54,30 @@
                     <li>Led the formulation of energy-saving criteria for 8+ campus laboratories, driving UCSD’s sustainability initiatives forward.</li>
                     <li>Presented data-driven energy savings in meetings with 6 stakeholders across 4 campus buildings, securing approval.</li>
                 </ul>
-                <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vc4xf1Yff2A" allowfullscreen></iframe>
-                    <img src="sample.png" alt="Sample Image" width="600" height="350">
-                </div>
+
+                <figure class="image-container">
+                    <img src="img/derc.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                    <img src="img/sample.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                </figure>
             </div>                       
 
             <div class="job">
-                <h4>Summer Researcher at CFD Lab</h4>
+                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">Computational Modelling & Flow Physics Lab</h2>
                 <p><em>Undergraduate Researcher</em></p>
-                <p>Full-time, Jun 2023 - Oct 2023</p>
-                <p>San Diego, California, United States</p>
                 <ul>
                     <li>Presenting summer research in the Summer Research Conference.</li>
                     <li>Skills: Software Development · Problem Solving · Ansys Design Modeller · Ansys TurboGrid · Ansys Customization Toolkit (ACT) · Computational Fluid Dynamics (CFD)</li>
                 </ul>
-                <img src="src.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-                <img src="mesh.jpg" alt="Devanshi Jain Portrait" style="max-width: 38.4%; height: auto;">
+                <figure class="image-container">
+                    <img src="img/src.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                    <img src="img/mesh.jpg" alt="Devanshi Jain Portrait" style="max-width: 38.4%; height: auto;">
+                </figure>
             </div>
             
             <div class="job">
-                <h4>Kastner Research Group</h4>
+                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">Kastner Research Group</h2>
                 <p><em>Embedded Systems Lead</em></p>
-                <p>Part-time, Nov 2021 – Present</p>
+                <p>Part-time, Nov 2021 – Jun 2023</p>
                 <ul>
                     <li>Developed an autonomous underwater vehicle with the Triton Robosub team under Professor Ryan Kastner’s mentorship.</li>
                     <li>Specialized in optimizing hydrophone array systems for remote underwater signal perception and precise navigation.</li>
@@ -80,12 +85,14 @@
                     <li>Integrated the Multiple Signal Classification algorithm into the sub’s controls, enhancing real-time signal processing.</li>
                     <li>Qualified for semi-finals of the Robosub 2023 Competition held in San Diego out of 35 teams representing 5 countries.</li>
                 </ul>
-                <img src="robosub1.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-                <img src="robosub2.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-            </div> 
+                <figure class="image-container">
+                    <img src="img/robosub1.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                    <img src="img/robosub2.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                </figure>
+                </div> 
 
             <div class="job">
-                <h4>COSMOS - ‘Hacking for Oceans’ Project</h4>
+                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">COSMOS - ‘Hacking for Oceans’ Project</h2>
                 <p><em>Teaching Assistant</em></p>
                 <p>Part-time, Jun 2022 – Jul 2022</p>
                 <ul>
@@ -93,25 +100,15 @@
                     <li>Instructed students in configuring long-range microcontrollers to enable remote networking and telemetry over 4 miles.</li>
                     <li>Directed students in programming GPS navigation and real-time sensor data visualization to actively monitor water quality.</li>
                 </ul>
-                <img src="1cosmos.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-                <img src="2cosmos.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                <figure class="image-container">
+                    <img src="img/1cosmos.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                    <img src="img/2cosmos.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                </figure>
             </div>
         </section>
     </main>
-    <aside>
-        <h4>Connect with Me</h4>
-        <a href="mailto:djain@ucsd.edu">
-            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40">
-        </a>
-        <a href="https://www.linkedin.com/in/djain18/">
-            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40">
-        </a>
-        <a href="https://github.com/devanshi-jain">
-            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40">
-        </a>
-    </aside>
-    <footer>
-        <p>&copy; 2023 Devanshi Jain</p>
+    <footer class="copyright">
+        <p>&copy; Devanshi.</p>
     </footer>
 </body>
 </html>
