--- a/organizations.html
+++ b/organizations.html
@@ -1,38 +1,33 @@
-<!-- <section id="organizations">
-    <h1>Organizations</h1>
-    <p>
-      My involvement in various clubs and organizations has provided me with valuable leadership experiences. Here are some of the organizations I've been a part of:
-    </p>
-    Add more content about your involvement in organizations
-  </section> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet">
     <title>Organizations & Involvement | Devanshi Jain</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
+    <header class = "header">
+        <a href="#" class="logo">Devanshi Jain</a>
+        
+        <input type="checkbox" id="toggle-menu" class="side-menu">
+        <label for="toggle-menu" class="hamb">
+            <i class="bx bx-menu"></i>
+        </label>
+        <nav class="navbar">
+            <a href="index.html">Home</a>
+            <a href="work.html">Work</a>
+            <a href="organizations.html" class="active">Organizations</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="organizations.html">Organizations</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="labexperiments.html">Lab-Experiments</a></li>
-
-        </ul>
-    </nav>
     <main>
-        <section>
-            <h1>Organizations & Involvement</h1>
-            <!-- <template id="org-template"> -->
-            <table>
+        <section class="organizations">
+            <h1 class="sub-title">Organizations & Involvement</h1>
+            <!-- <table>
                 <caption>My Involvement in Organizations</caption>
                 <colgroup>
                     <col style="background-color: #007bff;">
@@ -49,45 +44,31 @@
                     <td>Workshop's Chair</td>
                     <td>Organized and hosted 10+ workshops, including a 3-part Putnam exam series attended by 20+ students.</td>
                 </tr>
-                <!-- Add more rows as needed -->
-            </table>
-            <!-- </template> -->
-            <div class="sums">
-                <h2><span style="color: #007bff;">Society of Undergraduate Mathematics Students (SUMS)</span></h2>
-                <h3><em>Workshop's Chair</em></h3>
+            </table> -->
+
+            <section class="job">
+                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);"><span>Society of Undergraduate Mathematics Students (SUMS)</span></h2>
+                <h4><em>Workshop's Chair</em></h4>
                 <p>As Workshops Chair, organized and hosted 10+ workshops, including a 3-part Putnam exam series attended by 20+ students.</p>
-                <figure>
-                    <img src="IMG_0177.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-                    <figcaption>Presenting workshops at the general body meeting in 2022</figcaption>
+                <figure class="image-container">
+                    <img src="img/IMG_0177.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                    <!-- <figcaption>Presenting workshops at the general body meeting in 2022</figcaption> -->
+                    <img src="img/sums.jpg" alt="SUMS Image" style="max-width: 40%; height: auto;">
+                    <!-- <figcaption>Glimpse of the Number Theory : Putnam Workshop</figcaption> -->
                 </figure>
-                <figure>
-                    <img src="sums.jpg" alt="SUMS Image" style="max-width: 40%; height: auto;">
-                    <figcaption>Glimpse of the Number Theory : Putnam Workshop</figcaption>
-                </figure>
-            </div>
+            </section>
 
-            <h3>Here's me hitting the pinata for the CSE department's event in 2023:</h3>
+            <section class="job">
+            <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">
+            Here's me hitting the pinata for the CSE department's event in 2023:</h2>
             <video controls>
-                <source src="pinata.mp4" type="video/mp4">
+                <source src="media/pinata.mp4" type="video/mp4">
                 Your browser does not support the video element.
-              </video>
-
+            </video>
         </section>
     </main>
-    <aside>
-        <h4>Connect with Me</h4>
-        <a href="mailto:djain@ucsd.edu">
-            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40">
-        </a><a href="https://www.linkedin.com/in/djain18/">
-            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40">
-        </a><a href="https://github.com/devanshi-jain">
-            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40">
-        </a>
-    </aside>
-    <footer>
-        <p>&copy; 2023 Devanshi Jain</p>
+    <footer class="copyright">
+        <p>&copy; Devanshi.</p>
     </footer>
-
-
 </body>
 </html>
