all contact no-js commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     to become a good software engineer to make products accessible to all. Currently, I am actively looking
                     for a software engineering internship for Summer 2024. 
                     <br>
-                    The repository for the code is :<a href = https://github.com/devanshi-jain/Portfolio-134B-HTML style="color: #e28743;"> https://github.com/devanshi-jain/Portfolio-134B-HTML</a>
+                    <!-- The repository for the code is :<a href = https://github.com/devanshi-jain/Portfolio-134B-HTML style="color: #e28743;"> https://github.com/devanshi-jain/Portfolio-134B-HTML</a> -->
                 <br>
                     <div class="home-sci">
                     <a href="https://github.com/devanshi-jain"><i class='bx bxl-github'></i></a>
