contact updated js code.

--- a/contact-nojs.html
+++ b/contact-nojs.html
@@ -24,6 +24,10 @@
             color: red;
         }
 
+        input:invalid{
+            color: red;
+        }
+
         input:required:focus:invalid + span::after {
             content: "";
             /* color: red; */
