--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
         </label>
         <nav class="navbar">
             <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
             <a href="work.html">Work</a>
             <a href="organizations.html">Organizations</a>
             <a href="resume.html">Resume</a>
@@ -44,7 +45,7 @@
     }
 </style>
 <main>
-    <h2>About Me</h2>
+    <h1 class="heading">About Me</h1>
     <div class="about-content">
         <figure class="about-image">
             <img src="img/snow.png" alt="Devanshi in snow">
