--- a/contact-nojs.html
+++ b/contact-nojs.html
@@ -53,6 +53,7 @@
         </label>
         <nav class="navbar">
             <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
             <a href="work.html">Work</a>
             <a href="organizations.html">Organizations</a>
             <a href="resume.html">Resume</a>
