--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main id="resume">
         <section>
             <h1  class="sub-title">Resume</h1>
             <a href="media/resume.pdf" class="btn btn2" target="_blank">
