--- a/work.html
+++ b/work.html
@@ -18,15 +18,16 @@
         </label>
         <nav class="navbar">
             <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
             <a href="work.html" class="active">Work</a>
             <a href="organizations.html">Organizations</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main id="work">
         <section>
-            <h1 class="sub-title">Work Experience</h1>
+            <h1 class="heading">Work Experience</h1>
             <!-- <h3>UC San Diego Jacobs School of Engineering</h3> -->
             <div class="job">
                 <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">Center for Energy Research</h2>
