--- a/organizations.html
+++ b/organizations.html
@@ -18,16 +18,34 @@
         </label>
         <nav class="navbar">
             <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
             <a href="work.html">Work</a>
             <a href="organizations.html" class="active">Organizations</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main id="organizations">
+    <main>
         <section class="organizations">
-            <h1 class="heading">Organizations & Involvement</h1>
+            <h1 class="sub-title">Organizations & Involvement</h1>
+            <!-- <table>
+                <caption>My Involvement in Organizations</caption>
+                <colgroup>
+                    <col style="background-color: #007bff;">
+                    <col>
+                    <col>
+                </colgroup>
+                <tr>
+                    <th>Organization</th>
+                    <th>Role</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <td>Society of Undergraduate Mathematics Students (SUMS)</td>
+                    <td>Workshop's Chair</td>
+                    <td>Organized and hosted 10+ workshops, including a 3-part Putnam exam series attended by 20+ students.</td>
+                </tr>
+            </table> -->
+
             <section class="job">
                 <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);"><span>Society of Undergraduate Mathematics Students (SUMS)</span></h2>
                 <h4><em>Workshop's Chair</em></h4>
