--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
             <a href="resume.html">Resume</a>
             <a href="contact.html" class="active">Contact</a>
         </nav>
+        <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path></svg>
     </header>
     <main>
         <div class="contact-container">
@@ -115,7 +116,6 @@
                 <output name="comments_information"></output>
                 <button type="submit">Send<i class='bx bx-mail-send' ></i></button>
                 <p>0/1000</p>
-                <button type="button" id="simulateSubmit">Simulate Submit</button>
             </form>
         </section>  
     </div>             
@@ -125,119 +125,6 @@
     <p>&copy; Devanshi.</p>
 </footer>
 
-<!-- <script>document.addEventListener('DOMContentLoaded', function () {
-    // Array to capture form errors
-    var formErrors = [];
-
-    // Function to handle field validation
-    function validateField(field, pattern, errorMessage) {
-        var validitySpan = field.nextElementSibling;
-        var outputErrors = field.form.querySelector('[name=' + field.name + '_errors]');
-
-        if (!field.checkValidity()) {
-            field.classList.add('invalid');
-            validitySpan.textContent = '✖';
-            validitySpan.style.color = 'red';
-            outputErrors.textContent = errorMessage;
-            formErrors.push({ field: field.name, error: errorMessage });
-        } else {
-            field.classList.remove('invalid');
-            validitySpan.textContent = '✓';
-            validitySpan.style.color = 'green';
-            outputErrors.textContent = '';
-            // Remove error from formErrors if it exists
-            formErrors = formErrors.filter(error => !(error.field === field.name));
-        }
-    }
-
-    // Function to handle character count and warn/error style for textarea
-    function handleCharacterCount(field, minLength, maxLength) {
-        var validitySpan = field.nextElementSibling;
-        var outputInformation = field.form.querySelector('[name=' + field.name + '_information]');
-
-        var currentLength = field.value.length;
-        var remainingCharacters = maxLength - currentLength;
-        outputInformation.textContent = remainingCharacters + ' characters remaining';
-
-        if (currentLength < minLength) {
-            outputInformation.style.color = 'red'; // Error style
-            formErrors.push({ field: field.name, error: 'Too short. Minimum ' + minLength + ' characters required' });
-        } else if (remainingCharacters < 0) {
-            outputInformation.style.color = 'red'; // Error style
-            formErrors.push({ field: field.name, error: 'Too long. Maximum ' + maxLength + ' characters allowed' });
-        } else if (remainingCharacters < maxLength * 0.2) {
-            outputInformation.style.color = 'orange'; // Warn style
-        } else {
-            outputInformation.style.color = 'inherit';
-            // Remove error from formErrors if it exists
-            formErrors = formErrors.filter(error => !(error.field === field.name && (error.error === 'Too short. Minimum ' + minLength + ' characters required' || error.error === 'Too long. Maximum ' + maxLength + ' characters allowed')));
-        }
-    }
-
-    // Attach event listeners for input fields
-var inputFields = document.querySelectorAll('input[type="text"], input[type="email"], textarea');
-inputFields.forEach(function (field) {
-    field.addEventListener('input', function () {
-        // Restore original placeholder value
-        if (field.getAttribute('data-placeholder')) {
-            field.setAttribute('placeholder', field.getAttribute('data-placeholder'));
-        }
-
-        // Validate Name field
-        if (field.id === 'name') {
-            var pattern = /[A-Za-z\s.]+/;
-            validateField(field, pattern, 'Invalid name. Only letters and spaces and full-stops allowed');
-        }
-
-        // Validate Email field
-        if (field.id === 'email') {
-            validateField(field, null, 'Invalid email');
-        }
-
-        // Validate Comments field
-        if (field.id === 'Comments') {
-            var pattern = /[A-Za-z0-9\s.,!?':;()]+/;
-            validateField(field, pattern, 'Invalid characters. Only allowed characters: .,!?\':;()');
-            
-            // Update character count
-            handleCharacterCount(field, 4, 1000);
-            
-            // Validate length requirement
-            if (field.value.length < 4) {
-                var validitySpan = field.nextElementSibling;
-                validitySpan.textContent = '✖';
-                validitySpan.style.color = 'red';
-                formErrors.push({ field: field.name, error: 'Too short. Minimum 4 characters required' });
-            }
-        }
-    });
-});
-
-
-    // Attach event listener for form submission
-    var form = document.querySelector('form');
-    form.addEventListener('submit', function (event) {
-        // Prevent form submission if there are errors
-        if (formErrors.length > 0) {
-            event.preventDefault();
-            // Encode formErrors in JSON format and add to form data
-            var formErrorsJSON = JSON.stringify(formErrors);
-            var formErrorsInput = document.createElement('input');
-            formErrorsInput.type = 'hidden';
-            formErrorsInput.name = 'form-errors';
-            formErrorsInput.value = formErrorsJSON;
-            form.appendChild(formErrorsInput);
-        }
-    });
-
-    // Simulate form submission button
-    var simulateSubmitButton = document.getElementById('simulateSubmit');
-    simulateSubmitButton.addEventListener('click', function () {
-        // Manually trigger the form submission
-        form.submit();
-    });
-});
-</script> -->
 <script>
     document.addEventListener('DOMContentLoaded', function () {
     // Array to capture form errors
@@ -354,6 +241,15 @@ inputFields.forEach(function (field) {
     });
 });
 
+    var icon = document.getElementById("moon");
+    icon.onclick = function() {
+        document.body.classList.toggle("dark-theme");
+        if (document.body.classList.contains("dark-theme")) {
+            icon.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 252, 252, 1);transform: ;msFilter:;"><path d="M6.995 12c0 2.761 2.246 5.007 5.007 5.007s5.007-2.246 5.007-5.007-2.246-5.007-5.007-5.007S6.995 9.239 6.995 12zM11 19h2v3h-2zm0-17h2v3h-2zm-9 9h3v2H2zm17 0h3v2h-3zM5.637 19.778l-1.414-1.414 2.121-2.121 1.414 1.414zM16.242 6.344l2.122-2.122 1.414 1.414-2.122 2.122zM6.344 7.759 4.223 5.637l1.415-1.414 2.12 2.122zm13.434 10.605-1.414 1.414-2.122-2.122 1.414-1.414z"></path></svg>';
+        } else {
+            icon.innerHTML = '<path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path>';
+        }
+    }
 </script>
 </body>
 </html>
