--- a/work.html
+++ b/work.html
@@ -23,13 +23,15 @@
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
         </nav>
+        <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path></svg>
+
     </header>
     <main>
         <section>
             <h1 class="sub-title">Work Experience</h1>
             <!-- <h3>UC San Diego Jacobs School of Engineering</h3> -->
             <div class="job">
-                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">Center for Energy Research</h2>
+                <h2 class="job-company-name">Center for Energy Research</h2>
                 <p><em>Software Engineering Intern</em></p>
                 <div class="skills">
                     <a href="https://www.python.org/" target="_blank">
@@ -62,7 +64,7 @@
             </div>                       
 
             <div class="job">
-                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">Computational Modelling & Flow Physics Lab</h2>
+                <h2 class="job-company-name">Computational Modelling & Flow Physics Lab</h2>
                 <p><em>Undergraduate Researcher</em></p>
                 <ul>
                     <li>Presenting summer research in the Summer Research Conference.</li>
@@ -75,7 +77,7 @@
             </div>
             
             <div class="job">
-                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">Kastner Research Group</h2>
+                <h2 class="job-company-name">Kastner Research Group</h2>
                 <p><em>Embedded Systems Lead</em></p>
                 <p>Part-time, Nov 2021 – Jun 2023</p>
                 <ul>
@@ -92,7 +94,7 @@
                 </div> 
 
             <div class="job">
-                <h2 class="job-company-name" style="--orange-color: #e28743; text-decoration: underline; text-decoration-color: var(--orange-color);">COSMOS - ‘Hacking for Oceans’ Project</h2>
+                <h2 class="job-company-name">COSMOS - ‘Hacking for Oceans’ Project</h2>
                 <p><em>Teaching Assistant</em></p>
                 <p>Part-time, Jun 2022 – Jul 2022</p>
                 <ul>
@@ -111,4 +113,15 @@
         <p>&copy; Devanshi.</p>
     </footer>
 </body>
+<script>
+    var icon = document.getElementById("moon");
+    icon.onclick = function() {
+        document.body.classList.toggle("dark-theme");
+        if (document.body.classList.contains("dark-theme")) {
+            icon.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 252, 252, 1);transform: ;msFilter:;"><path d="M6.995 12c0 2.761 2.246 5.007 5.007 5.007s5.007-2.246 5.007-5.007-2.246-5.007-5.007-5.007S6.995 9.239 6.995 12zM11 19h2v3h-2zm0-17h2v3h-2zm-9 9h3v2H2zm17 0h3v2h-3zM5.637 19.778l-1.414-1.414 2.121-2.121 1.414 1.414zM16.242 6.344l2.122-2.122 1.414 1.414-2.122 2.122zM6.344 7.759 4.223 5.637l1.415-1.414 2.12 2.122zm13.434 10.605-1.414 1.414-2.122-2.122 1.414-1.414z"></path></svg>';
+        } else {
+            icon.innerHTML = '<path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path>';
+        }
+    }
+</script>    
 </html>
